remove old gym references; change formatting

--- a/tutorials/cartpole.ipynb
+++ b/tutorials/cartpole.ipynb
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# setup CQL algorithm\n",
-    "cql = d3rlpy.algos.DiscreteCQLConfig().create(device='cuda:0')\n",
+    "cql = d3rlpy.algos.DiscreteCQLConfig().create(device=\"cuda:0\")\n",
     "\n",
     "# start training\n",
     "cql.fit(\n",
@@ -74,7 +74,9 @@
     "    n_steps=10000,\n",
     "    n_steps_per_epoch=1000,\n",
     "    evaluators={\n",
-    "        'environment': d3rlpy.metrics.EnvironmentEvaluator(env), # evaluate with CartPole-v1 environment\n",
+    "        \"environment\": d3rlpy.metrics.EnvironmentEvaluator(\n",
+    "            env\n",
+    "        ),  # evaluate with CartPole-v1 environment\n",
     "    },\n",
     ")"
    ]
@@ -92,14 +94,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gym\n",
+    "import gymnasium as gym\n",
     "from gym.wrappers import RecordVideo\n",
     "\n",
     "# start virtual display\n",
     "d3rlpy.notebook_utils.start_virtual_display()\n",
     "\n",
     "# wrap RecordVideo wrapper\n",
-    "env = RecordVideo(gym.make(\"CartPole-v1\", render_mode=\"rgb_array\"), './video')\n",
+    "env = RecordVideo(gym.make(\"CartPole-v1\", render_mode=\"rgb_array\"), \"./video\")\n",
     "\n",
     "# evaluate\n",
     "d3rlpy.metrics.evaluate_qlearning_with_environment(cql, env)"
@@ -123,6 +125,11 @@
   }
  ],
  "metadata": {
+  "accelerator": "GPU",
+  "colab": {
+   "gpuType": "T4",
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -139,12 +146,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
-  },
-  "colab": {
-    "provenance": [],
-    "gpuType": "T4"
-  },
-  "accelerator": "GPU"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
