--- a/tutorials/online.ipynb
+++ b/tutorials/online.ipynb
@@ -46,10 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gym\n",
+    "import gymnasium as gym\n",
     "\n",
-    "env = gym.make('CartPole-v1')\n",
-    "eval_env = gym.make('CartPole-v1')"
+    "env = gym.make(\"CartPole-v1\")\n",
+    "eval_env = gym.make(\"CartPole-v1\")"
    ]
   },
   {
@@ -71,7 +71,7 @@
     "dqn = d3rlpy.algos.DQNConfig(\n",
     "    learning_rate=1e-3,\n",
     "    target_update_interval=100,\n",
-    ").create(device='cuda:0')\n",
+    ").create(device=\"cuda:0\")\n",
     "\n",
     "# setup explorer\n",
     "explorer = d3rlpy.algos.ConstantEpsilonGreedy(epsilon=0.3)\n",
@@ -103,13 +103,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from gym.wrappers import RecordVideo\n",
+    "from gymnasium.wrappers import RecordVideo\n",
     "\n",
     "# start virtual display\n",
     "d3rlpy.notebook_utils.start_virtual_display()\n",
     "\n",
     "# wrap Monitor wrapper\n",
-    "env = RecordVideo(gym.make(\"CartPole-v1\", render_mode=\"rgb_array\"), './video')\n",
+    "env = RecordVideo(gym.make(\"CartPole-v1\", render_mode=\"rgb_array\"), \"./video\")\n",
     "\n",
     "# evaluate\n",
     "d3rlpy.metrics.evaluate_qlearning_with_environment(dqn, env)"
@@ -133,6 +133,11 @@
   }
  ],
  "metadata": {
+  "accelerator": "GPU",
+  "colab": {
+   "gpuType": "T4",
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -149,12 +154,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
-  },
-  "colab": {
-    "provenance": [],
-    "gpuType": "T4"
-  },
-  "accelerator": "GPU"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
