--- a/tutorials/tpu.ipynb
+++ b/tutorials/tpu.ipynb
@@ -83,6 +83,7 @@
       "source": [
         "# get TPU device\n",
         "import torch_xla.core.xla_model as xm\n",
+        "\n",
         "device = xm.xla_device()\n",
         "\n",
         "# setup CQL algorithm\n",
@@ -94,7 +95,9 @@
         "    n_steps=10000,\n",
         "    n_steps_per_epoch=1000,\n",
         "    evaluators={\n",
-        "        'environment': d3rlpy.metrics.EnvironmentEvaluator(env), # evaluate with CartPole-v1 environment\n",
+        "        \"environment\": d3rlpy.metrics.EnvironmentEvaluator(\n",
+        "            env\n",
+        "        ),  # evaluate with CartPole-v1 environment\n",
         "    },\n",
         ")"
       ]
@@ -116,14 +119,14 @@
       },
       "outputs": [],
       "source": [
-        "import gym\n",
+        "import gymnasium as gym\n",
         "from gym.wrappers import RecordVideo\n",
         "\n",
         "# start virtual display\n",
         "d3rlpy.notebook_utils.start_virtual_display()\n",
         "\n",
         "# wrap RecordVideo wrapper\n",
-        "env = RecordVideo(gym.make(\"CartPole-v1\", render_mode=\"rgb_array\"), './video')\n",
+        "env = RecordVideo(gym.make(\"CartPole-v1\", render_mode=\"rgb_array\"), \"./video\")\n",
         "\n",
         "# evaluate\n",
         "d3rlpy.metrics.evaluate_qlearning_with_environment(cql, env)"
@@ -151,6 +154,10 @@
     }
   ],
   "metadata": {
+    "accelerator": "TPU",
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -166,11 +173,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.7"
-    },
-    "colab": {
-      "provenance": []
-    },
-    "accelerator": "TPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
